--- a/project-1.html
+++ b/project-1.html
@@ -17,7 +17,7 @@
         <li>Visiting new places</li>
     </ol>
     <p>test message</p>
-
+<script src="test.js"></script>
     <p>My website link is obtained after clicking below image</p>
     <a href="https://sarthakb.com.np/" target="_blank">  <img src="C:\Users\sarth\OneDrive\Desktop\HTML\logo.webp" alt="Sarthak Bhattarai Logo" width="200"> </a>
 
