--- a/project-1.html
+++ b/project-1.html
@@ -6,6 +6,7 @@
     <title>About Sarthak Bhattarai</title>
     <img src="C:\Users\sarth\Downloads\WhatsApp Image 2025-05-11 at 10.57.39 PM.jpeg" alt="my_image" width="100">
 </head>
+<link rel="stylesheet" href="style.css">
 <body>
     <h1>Welcome to my website</h1>
     <br>
